--- a/src/assets/scss/cmps/_TableList.scss
+++ b/src/assets/scss/cmps/_TableList.scss
@@ -15,11 +15,39 @@
 	background-color: #f4f5f7;
 }
 
+.grid-row {
+	position: relative;
+	.delete-btn-wrapper {
+		opacity: 0;
+		position: absolute;
+		top: 50%;
+		translate: 0 -50%;
+		left: -30px;
+		width: 30px;
+		height: $cell-height;
+		@include flex-center;
+	}
+	.delete-btn {
+		cursor: pointer;
+	}
+	&:hover {
+		.delete-btn-wrapper {
+			opacity: 0.5;
+			&:hover {
+				opacity: 1;
+			}
+		}
+	}
+}
+
 .grid-cell {
+	height: $cell-height;
 	border: 1px solid #ddd;
 	padding: 8px;
 	background-color: #ffffff;
 	color: #4b4b4b;
+	display: flex;
+	align-items: center;
 }
 
 .edit-input {
