--- a/src/assets/scss/setup/_variables.scss
+++ b/src/assets/scss/setup/_variables.scss
@@ -33,4 +33,5 @@ $white-font-clr: #fcfcfe;
 $input-radius: rem(6px);
 $input-padding: em(15px) em(28px);
 
-$scrollbar-width: 8px;
+$scrollbar-width: 5px;
+$cell-height: 50px;
